--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,13 @@ jobs:
       - name: Install Rust (rustup)
         if: matrix.os != 'macos-latest'
         run: |
-          set -e
+          rustup self update # TODO: when default rustup is bumped to 1.20+, remove this.
+          rustup set profile minimal
           rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
       - name: Install Rust (macos)
         if: matrix.os == 'macos-latest'
         run: |
-          set -e
-          curl https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ matrix.rust }}
+          curl https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ matrix.rust }} --profile minimal
           echo "##[add-path]$HOME/.cargo/bin"
       - name: cargo test
         run: |
@@ -57,15 +57,12 @@ jobs:
       - uses: actions/checkout@master
       - name: Install Rust
         run: |
-          set -e
+          rustup self update # TODO: when default rustup is bumped to 1.20+, remove this.
+          rustup set profile minimal
           rustup update nightly && rustup default nightly
       - name: Install component
         run: |
-          set +e
-          if rustup component add ${{ matrix.component }}; then
-            set -e
-          else
-            set -e
+          if ! rustup component add ${{ matrix.component }}; then
             # If the component is unavailable on the latest nightly,
             # use the latest toolchain with the component available.
             # Refs: https://github.com/rust-lang/rustup-components-history#the-web-part
