--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -1,8 +1,8 @@
 status = [
     "test (ubuntu-latest, stable)",
     "test (ubuntu-latest, nightly)",
-    "test (macOS-latest, stable)",
-    "test (macOS-latest, nightly)",
+    "test (macos-latest, stable)",
+    "test (macos-latest, nightly)",
     "test (windows-latest, stable)",
     "test (windows-latest, nightly)",
     "style (clippy)",
