--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,36 +8,33 @@ on:
       - staging
       - trying
   schedule:
-    - cron: 00 01 * * 00 # Weekly
+    - cron: '00 01 * * *'
+
+env:
+  RUSTFLAGS: -Dwarnings
 
 jobs:
   test:
     name: test
     runs-on: ${{ matrix.os }}
     env:
-      RUSTFLAGS: -Dwarnings
+      AGENT_OS: ${{ matrix.os }}
+      RUST_TOOLCHAIN: ${{ matrix.rust }}
     strategy:
       matrix:
         os:
           - ubuntu-latest
-          - macOS-latest
+          - macos-latest
           - windows-latest
         rust:
           - stable
           - nightly
     steps:
       - uses: actions/checkout@master
-      - name: Install Rust (rustup)
-        if: matrix.os != 'macos-latest'
+      - name: Install Rust
+        shell: bash
         run: |
-          rustup self update # TODO: when default rustup is bumped to 1.20+, remove this.
-          rustup set profile minimal
-          rustup update ${{ matrix.rust }} --no-self-update && rustup default ${{ matrix.rust }}
-      - name: Install Rust (macos)
-        if: matrix.os == 'macos-latest'
-        run: |
-          curl https://sh.rustup.rs | sh -s -- -y --default-toolchain ${{ matrix.rust }} --profile minimal
-          echo "##[add-path]$HOME/.cargo/bin"
+          . ./ci/install-rust.sh
       - name: cargo test
         run: |
           cargo test
@@ -45,8 +42,6 @@ jobs:
   style:
     name: style
     runs-on: ubuntu-latest
-    env:
-      RUSTFLAGS: -Dwarnings
     strategy:
       fail-fast: false
       matrix:
@@ -56,23 +51,13 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Install Rust
+        shell: bash
         run: |
-          rustup self update # TODO: when default rustup is bumped to 1.20+, remove this.
-          rustup set profile minimal
-          rustup update nightly && rustup default nightly
+          . ./ci/install-rust.sh
       - name: Install component
+        shell: bash
         run: |
-          if ! rustup component add ${{ matrix.component }}; then
-            # If the component is unavailable on the latest nightly,
-            # use the latest toolchain with the component available.
-            # Refs: https://github.com/rust-lang/rustup-components-history#the-web-part
-            component=${{ matrix.component }}
-            target=`curl https://rust-lang.github.io/rustup-components-history/x86_64-unknown-linux-gnu/$component`
-            echo "'$component' is unavailable on the toolchain 'nightly', use the toolchain 'nightly-$target' instead"
-            rustup toolchain install nightly-$target
-            rustup default nightly-$target
-            rustup component add $component
-          fi
+          . ./ci/install-component.sh ${{ matrix.component }}
       - name: cargo clippy
         if: matrix.component == 'clippy'
         run: |
