--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -1,11 +1,3 @@
-status = [
-    "test (ubuntu-latest, stable)",
-    "test (ubuntu-latest, nightly)",
-    "test (macos-latest, stable)",
-    "test (macos-latest, nightly)",
-    "test (windows-latest, stable)",
-    "test (windows-latest, nightly)",
-    "style (clippy)",
-    "style (rustfmt)",
-]
+block_labels = ["I-needs-decision", "S-blocked"]
 delete_merged_branches = true
+status = ["ci"]
