--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,20 @@
 # EditorConfig configuration
 # https://editorconfig.org
 
-# Top-most EditorConfig file
 root = true
 
 [*]
+charset = utf-8
 end_of_line = lf
+indent_size = 4
+indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
-charset = utf-8
-indent_style = space
-indent_size = 4
 
 [*.{json,yml,md}]
 indent_size = 2
 
 [*.sh]
+indent_size = 2
+binary_next_line = true
 switch_case_indent = true
